# miniCryptocurrencyTracker

./: .dockerignore  .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1760fed124c5_initial_tables.py  1d07dc95035b_add_enum_to_postgres.py  a37f63bf9a7f_add_columns_for_users.py
app/: app.py
app/api/v1/routers/: __init__.py  admin.py  authentication.py  cryptocurrencies.py  user.py
app/controller/v1/routers/: cryptocurrencies.py
app/core/: config.py  database.py
app/dependencies/: dependencies.py
app/dto/model/: base.py  mixins.py  user.py
app/dto/schema/: cryptocurrency.py  user.py
app/repository/: base.py  jwt.py  user.py
app/service/: admin.py  authentication.py  user.py
app/service/coinmarketcap/: cmc_http_client.py  http_client.py
app/services/coinmarketcap/: cmc_http_client.py
src/: app.py  config.py  main.py  schemas.py
src/api/v1/routers/: __init__.py  cryptocurrencies.py
src/dependencies/: cmc_http_client.py  dependencies.py  http_client.py
src/routers/: cryptocurrencies.py
src/services/coinmarketcap/: cmc_http_client.py
