[tool.poetry]
name = "fastapi-react app"
version = "0.1.0"
description = ""
authors = ["Lius <morarolivio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
aiohttp = "^3.9.5"
loguru = "^0.7.2"
environs = "^11.0.0"
async-lru = "^2.0.4"
pyjwt = "^2.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
asyncpg = "^0.29.0"
fastapi-utils = "^0.7.0"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#------------------------------------------------
[tool.black]
target-version = ['py312']
line-length = 89
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
      | alembic

      # The following are specific to Black, you probably don't want those.
      | blib2to3
      | tests/data
    )/'''
force-exclude = '''
    /(
        \alembic
        | \.git
    )/
'''

[tool.isort]
profile = "black"
